--- a/src/components/model-item.astro
+++ b/src/components/model-item.astro
@@ -18,7 +18,7 @@ const { model, size, price, bedrooms } = Astro.props
 <details
   open
   name='model-information'
-  class='flex-col rounded-lg p-3 border-1 border-white/60 text-white uppercase bg-primary-coral shadow-md tracking-wider'
+  class='flex-col rounded-lg p-3 border-1 border-white/60 text-primary-coral uppercase bg-white shadow-md tracking-wider'
 >
   <summary class='flex flex-row justify-between items-center group'>
     <h3 id='modelo' class='text-xl font-semibold leading-none'>
@@ -28,7 +28,7 @@ const { model, size, price, bedrooms } = Astro.props
   </summary>
 
   <article>
-    <div class='w-full h-[1px] my-2 bg-white'></div>
+    <div class='w-full h-[1px] my-2 bg-primary-coral'></div>
 
     <div
       class='grid grid-cols-2 grid-rows-3 gap-2 font-extralight tracking-wide text-lg [&>h4]:font-normal'
