feat: añade componente de galería y datos de imágenes; incluye traducciones para la sección de galería

--- a/src/components/app.astro
+++ b/src/components/app.astro
@@ -8,6 +8,7 @@ import Premises from '@/components/premises.astro'
 import Ubication from '@/components/ubication.astro'
 import Areas from '@/components/commons-areas.astro'
 import Inventory from './inventory.astro'
+import Gallery from './gallery.astro'
 ---
 
 <Layout>
@@ -19,4 +20,5 @@ import Inventory from './inventory.astro'
   <Ubication />
   <Areas />
   <Inventory />
+  <Gallery />
 </Layout>
