--- a/src/components/app.astro
+++ b/src/components/app.astro
@@ -9,6 +9,7 @@ import Ubication from '@/components/ubication.astro'
 import Areas from '@/components/commons-areas.astro'
 import Inventory from './inventory.astro'
 import Gallery from './gallery.astro'
+import Quote from './quote.astro'
 ---
 
 <Layout>
@@ -21,4 +22,5 @@ import Gallery from './gallery.astro'
   <Areas />
   <Inventory />
   <Gallery />
+  <Quote />
 </Layout>
