--- a/src/components/gallery.astro
+++ b/src/components/gallery.astro
@@ -12,7 +12,7 @@ const t = useTranslations(lang)
   id='gallery'
   class='flex flex-col items-center justify-start min-h-screen'
 >
-  <div class='px-8 md:px-24 py-20 w-full'>
+  <div class='px-8 md:px-24 py-14 w-full'>
     <heading
       class='uppercase text-center mb-8 h-fit flex flex-col items-center gap-8'
     >
@@ -198,6 +198,10 @@ const t = useTranslations(lang)
 
     @media (min-width: 768px) {
       grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    }
+
+    @media (min-width: 1024px) {
+      grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
     }
 
     button {
