feat: actualiza importaciones de componentes para usar rutas absolutas; añade componente de pie de página

--- a/src/components/app.astro
+++ b/src/components/app.astro
@@ -7,9 +7,10 @@ import Welcome from '@/components/welcome.astro'
 import Premises from '@/components/premises.astro'
 import Ubication from '@/components/ubication.astro'
 import Areas from '@/components/commons-areas.astro'
-import Inventory from './inventory.astro'
-import Gallery from './gallery.astro'
-import Quote from './quote.astro'
+import Inventory from '@/components/inventory.astro'
+import Gallery from '@/components/gallery.astro'
+import Quote from '@/components/quote.astro'
+import Footer from '@/components/footer.astro'
 ---
 
 <Layout>
@@ -23,4 +24,5 @@ import Quote from './quote.astro'
   <Inventory />
   <Gallery />
   <Quote />
+  <Footer />
 </Layout>
