--- a/src/components/commons-areas.astro
+++ b/src/components/commons-areas.astro
@@ -1,5 +1,5 @@
 ---
-import Section from './section.astro'
+import Section from '@/components/section.astro'
 import CommonAreaItem from './common-area-item.astro'
 
 import { imagesCommonsAreas } from '@/consts/images'
