--- a/src/components/inventory.astro
+++ b/src/components/inventory.astro
@@ -1,6 +1,6 @@
 ---
 import { getLangFromUrl, useTranslations } from '@/i18n/utils'
-import Section from './section.astro'
+import Section from '@/components/section.astro'
 
 import inventory from '@/assets/inventory.png'
 import InventoryMobile from './inventory-mobile.astro'
