--- a/src/components/premises.astro
+++ b/src/components/premises.astro
@@ -1,6 +1,6 @@
 ---
 import Ripple from './icons/ripple.astro'
-import Section from './section.astro'
+import Section from '@/components/section.astro'
 
 import { getLangFromUrl, useTranslations } from '@/i18n/utils'
 
