--- a/src/components/gallery.astro
+++ b/src/components/gallery.astro
@@ -1,5 +1,5 @@
 ---
-import Section from './section.astro'
+import Section from '@/components/section.astro'
 import { imagesgallery } from '@/consts/images'
 import { getLangFromUrl, useTranslations } from '@/i18n/utils'
 import Carousel from './carousel.astro'
