--- a/src/components/life-style.astro
+++ b/src/components/life-style.astro
@@ -1,5 +1,5 @@
 ---
-import Section from './section.astro'
+import Section from '@/components/section.astro'
 import { imagesLifeStyle } from '@/consts/images'
 import { getLangFromUrl, useTranslations } from '@/i18n/utils'
 
