--- a/src/components/options.astro
+++ b/src/components/options.astro
@@ -1,6 +1,6 @@
 ---
 import OptionsItem from './options-item.astro'
-import Section from './section.astro'
+import Section from '@/components/section.astro'
 
 import { getLangFromUrl, useTranslations } from '@/i18n/utils'
 
