--- a/src/components/quote.astro
+++ b/src/components/quote.astro
@@ -1,6 +1,6 @@
 ---
 import Mail from './icons/mail.astro'
-import Section from './section.astro'
+import Section from '@/components/section.astro'
 import { getLangFromUrl, useTranslations } from '@/i18n/utils'
 
 const lang = getLangFromUrl(Astro.url)
@@ -12,7 +12,7 @@ const t = useTranslations(lang)
   class='flex flex-col items-center justify-center px-8 md:px-24 pb-14'
 >
   <article
-    class='bg-primary-coral/10 text-primary-blue px-8 py-12 rounded-lg flex flex-col items-center justify-center text-center gap-8'
+    class='w-full bg-primary-coral/10 text-primary-blue px-8 py-12 rounded-lg flex flex-col items-center justify-center text-center gap-8'
   >
     <Mail class='size-14 stroke-1' />
     <h1 class='text-2xl sm:text-4xl tracking-[0.5rem] uppercase font-semibold'>
