--- a/src/components/welcome.astro
+++ b/src/components/welcome.astro
@@ -1,6 +1,6 @@
 ---
 import Carousel from './carousel.astro'
-import Section from './section.astro'
+import Section from '@/components/section.astro'
 
 import { imagesWelcome } from '@/consts/images'
 import { getLangFromUrl, useTranslations } from '@/i18n/utils'
