--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,6 +14,10 @@
   --color-sold: #d8354b;
 }
 
+:root {
+  color-scheme: light;
+}
+
 body {
   font-family: var(--font-display);
   overflow-x: hidden;
