--- a/src/components/welcome.astro
+++ b/src/components/welcome.astro
@@ -1,5 +1,5 @@
 ---
-import Carousel from './carousel.astro'
+import Carousel from '@/components/carousel.astro'
 import Section from '@/components/section.astro'
 
 import { imagesWelcome } from '@/consts/images'
