feat: reemplaza componente Ubicación por Mapa en app.astro; añade nuevo componente de Mapa

--- a/src/components/app.astro
+++ b/src/components/app.astro
@@ -5,7 +5,7 @@ import Options from '@/components/options.astro'
 import LifeStyle from '@/components/life-style.astro'
 import Welcome from '@/components/welcome.astro'
 import Premises from '@/components/premises.astro'
-import Ubication from '@/components/ubication.astro'
+import Map from '@/components/map.astro'
 import Areas from '@/components/commons-areas.astro'
 import Inventory from '@/components/inventory.astro'
 import Gallery from '@/components/gallery.astro'
@@ -19,7 +19,7 @@ import Footer from '@/components/footer.astro'
   <Options />
   <LifeStyle />
   <Premises />
-  <Ubication />
+  <Map />
   <Areas />
   <Inventory />
   <Gallery />
