--- a/src/components/life-style.astro
+++ b/src/components/life-style.astro
@@ -31,7 +31,7 @@ const t = useTranslations(lang)
     <img
       src={imagesLifeStyle.src}
       alt={t('life-style.image.alt')}
-      class='w-full h-full aspect-[7/9] sm:aspect-[2/1] object-cover'
+      class='w-full h-full aspect-[7/9] sm:aspect-[2/1] object-cover rounded-2xl'
     />
   </div>
 </Section>
