--- a/src/components/ubication.astro
+++ b/src/components/ubication.astro
@@ -1,11 +1,11 @@
 ---
-import map from '@/assets/map.png'
+import { imagesUbication } from '@/consts/images'
 ---
 
 <div class='w-full h-auto'>
   <img
-    src={map.src}
-    alt='Mapa para encontrar Marasa'
-    class='w-full h-full object-cover'
+    src={imagesUbication.src}
+    alt={imagesUbication.alt}
+    class='w-full h-full object-cover aspect-video object-right-top'
   />
 </div>
