--- a/src/components/welcome.astro
+++ b/src/components/welcome.astro
@@ -35,7 +35,7 @@ const t = useTranslations(lang)
     <Carousel
       images={imagesWelcome}
       title='Welcome'
-      classWrapper='p-14 md:p-20 gap-28 md:gap-40'
+      classWrapper='p-14 md:p-20 gap-28 md:gap-40 [&>img]:rounded-2xl'
       buttonsColor='var(--color-primary-blue)'
     />
   </div>
