feat: añade componentes de navbar para versiones de escritorio y móvil

--- a/src/components/app.astro
+++ b/src/components/app.astro
@@ -11,10 +11,12 @@ import Inventory from '@/components/inventory.astro'
 import Gallery from '@/components/gallery.astro'
 import Quote from '@/components/quote.astro'
 import Footer from '@/components/footer.astro'
+import NavBar from '@/components/navbar/index.astro'
 ---
 
 <Layout>
   <Hero />
+  <NavBar />
   <Welcome />
   <Options />
   <LifeStyle />
