--- a/src/components/commons-areas.astro
+++ b/src/components/commons-areas.astro
@@ -33,7 +33,10 @@ const commonsAreas = [
 ---
 
 <div class='w-full h-fit bg-primary-blue'>
-  <Section class='flex flex-col items-center justify-center !bg-transparent'>
+  <Section
+    id='commons-areas'
+    class='flex flex-col items-center justify-center !bg-transparent'
+  >
     <div class='px-8 md:px-24 py-20 w-full text-white'>
       <heading
         class='uppercase text-center h-fit flex flex-col items-center gap-12'
