--- a/src/components/inventory.astro
+++ b/src/components/inventory.astro
@@ -17,7 +17,7 @@ const t = useTranslations(lang)
 ---
 
 <div class='bg-primary-coral'>
-  <Section class='relative flex-col py-14 px-4 !bg-transparent'>
+  <Section id='inventory' class='relative flex-col py-14 px-4 !bg-transparent'>
     <heading
       class='uppercase text-center h-fit flex flex-col items-center gap-2 text-white'
     >
