--- a/src/components/life-style.astro
+++ b/src/components/life-style.astro
@@ -7,7 +7,7 @@ const lang = getLangFromUrl(Astro.url)
 const t = useTranslations(lang)
 ---
 
-<Section class='flex flex-col items-center justify-center'>
+<Section id='life-style' class='flex flex-col items-center justify-center'>
   <div class='px-8 md:px-24 py-20 w-full'>
     <heading
       class='uppercase text-center mb-20 h-fit flex flex-col items-center gap-8'
