--- a/src/components/premises.astro
+++ b/src/components/premises.astro
@@ -9,7 +9,10 @@ const t = useTranslations(lang)
 ---
 
 <div class='w-full h-fit bg-primary-blue/40'>
-  <Section class='flex flex-col items-center justify-center !bg-transparent'>
+  <Section
+    id='premises'
+    class='flex flex-col items-center justify-center !bg-transparent'
+  >
     <div class='px-8 md:px-24 py-20 w-full text-primary-blue'>
       <heading
         class='uppercase text-center mb-20 h-fit flex flex-col items-center gap-8'
