--- a/src/components/ubication.astro
+++ b/src/components/ubication.astro
@@ -2,10 +2,10 @@
 import { imagesUbication } from '@/consts/images'
 ---
 
-<div class='w-full h-auto'>
+<section id='ubication' class='w-full h-auto'>
   <img
     src={imagesUbication.src}
     alt={imagesUbication.alt}
     class='w-full h-full object-cover aspect-video object-right-top'
   />
-</div>
+</section>
