--- a/src/components/welcome.astro
+++ b/src/components/welcome.astro
@@ -9,7 +9,7 @@ const lang = getLangFromUrl(Astro.url)
 const t = useTranslations(lang)
 ---
 
-<Section class='flex flex-col items-center justify-center'>
+<Section id='welcome' class='flex flex-col items-center justify-center'>
   <div class='px-8 md:px-24 w-full'>
     <heading
       class='uppercase text-center py-20 h-fit flex flex-col items-center gap-8'
