--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -18,7 +18,16 @@
   color-scheme: light;
 }
 
-body {
+html {
   font-family: var(--font-display);
   overflow-x: hidden;
+  scroll-behavior: smooth;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  text-wrap: pretty;
+}
+
+p, small, strong {
+  text-wrap: balance;
 }
