--- a/src/components/navbar/menu-desktop.astro
+++ b/src/components/navbar/menu-desktop.astro
@@ -4,7 +4,7 @@ const { sections } = Astro.props
 
 <ul
   id='navbar-menu-desktop'
-  class='hidden md:flex flex-wrap gap-x-8 gap-y-2 items-center justify-around w-full group py-4'
+  class='hidden md:flex flex-wrap gap-x-8 gap-y-2 items-center justify-around w-full group py-4 px-8 md:px-24'
 >
   {
     sections.map(({ title, href }) => (
